Add request method to pulls

--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "build": "npx ts-packager -e src/Start.ts",
     "certs": "ts-node devtools/certs-generator/CLI.ts",
     "generate-types": "ts-node devtools/codegen/CLI.ts",
-    "clear-sessions": "redis-cli flushall",
     "dev": "ts-node devtools/dev-server/CLI.ts",
     "lint": "ts-node ci/commands/Lint.ts",
-    "reset-db": "npx prisma migrate reset && npx prisma db push && yarn clear-sessions",
+    "reset-db": "npx prisma migrate reset && npx prisma db push",
     "migrate": "npx prisma migrate dev --name",
     "prod": "pm2 start 'npm run start' -i max",
     "prod:stop": "pm2 stop all",
