--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@figliolia/child-process": "^1.0.3",
     "@figliolia/ts-packager": "^1.0.6",
+    "@figliolia/typescript-dev-server": "^1.0.4",
     "@swc/core": "^1.3.107",
     "@types/chalk": "^2.2.0",
     "@types/cors": "^2.8.17",
