--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "types": "dist/types/index.d.ts",
   "scripts": {
     "build": "npx ts-packager -e src/Start.ts",
-    "certs": "ts-node devtools/certs-generator/CLI.ts",
-    "dev": "ts-node devtools/dev-server/CLI.ts",
-    "lint": "ts-node ci/commands/Lint.ts",
+    "certs": "tsx devtools/certs-generator/CLI.ts",
+    "dev": "tsx devtools/dev-server/CLI.ts",
+    "lint": "tsx ci/commands/Lint.ts",
     "reset-db": "npx prisma migrate reset && npx prisma db push",
     "migrate": "npx prisma migrate dev --name",
     "prod": "pm2 start 'npm run start' -i max",
@@ -66,7 +66,6 @@
     "pm2": "^5.3.1",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1"
